# weeLog

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
docs/: 速记日报-prd.md
suji/: generate-icon.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
suji/src/: App.tsx  index.css  main.tsx
suji/src-tauri/: Cargo.toml  tauri.conf.json
suji/src-tauri/capabilities/: default.json
suji/src-tauri/src/: lib.rs  main.rs
suji/src/components/: AIModelConfig.tsx  CalendarDay.tsx  CalendarView.tsx  CommandInput.tsx  ContextMenu.tsx  DataManagement.tsx  DateTimePicker.tsx  FloatingWindow.tsx  MainLayout.tsx  PrioritySelector.tsx  ReportCard.tsx  ReportEditor.tsx  ReportPage.tsx  ReportSearch.tsx  SettingsPage.tsx  SettingsSection.tsx  ShortcutConfig.tsx  StatisticsPanel.tsx  SujiTab.tsx  TabBar.tsx  ThemeConfig.tsx  ThemeProvider.tsx  TimelineView.tsx  TitleBar.tsx  TodoDetail.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx  TodoListItem.tsx  TodoPage.tsx  TodoTab.tsx
suji/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  input.tsx  slider.tsx  sonner.tsx  switch.tsx  textarea.tsx
suji/src/hooks/: useReports.ts  useTheme.ts  useTodos.ts
suji/src/lib/: db.ts  reportTemplates.ts  store.ts
suji/src/types/: index.ts
